docs/theme: Fix padding on small screens
This had the text overflowing the screen.

Now it should center nicely.

--- a/doc_src/python_docs_theme/static/pydoctheme.css
+++ b/doc_src/python_docs_theme/static/pydoctheme.css
@@ -59,25 +59,6 @@ div.sphinxsidebar {
     float: none;
 }
 
-/* On screens that are less than 700px wide remove anything non-essential
-   - the sidebar, the gradient background, ... */
-@media screen and (max-width: 700px) {
-  div.sphinxsidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  div.content {margin-left: 0;}
-  div.bodywrapper { margin: 0; }
-  div#fmain {
-    border-radius: 0px;
-    margin: 0;
-    -moz-box-shadow: 0;
-    -webkit-box-shadow: 0;
-    box-shadow: 0;
-  }
-}
-
 div.sphinxsidebar h3, div.sphinxsidebar h4 {
     margin-top: 1.5em;
 }
@@ -232,4 +213,32 @@ div.footer a:hover {
 
 dl > dt span ~ em {
     font-family: monospace, sans-serif;
+}
+
+/* On screens that are less than 700px wide remove anything non-essential
+   - the sidebar, the gradient background, ... */
+@media screen and (max-width: 700px) {
+  div.sphinxsidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  div.content {margin-left: 0;}
+
+    div.bodywrapper {
+        margin: 0;
+    }
+    div.body {
+        padding: 1rem;
+    }
+
+  div#fmain {
+    border-radius: 0px;
+    margin: 0;
+    -moz-box-shadow: 0;
+    -webkit-box-shadow: 0;
+    box-shadow: 0;
+    width: 100%;
+    padding: 0;
+  }
 }
